# forums_scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
analysis/: README.md  __init__.py  cli.py  config.py  evaluate_gender_predictions.py  gender_prediction.py  requirements.txt
analysis/politics/: __init__.py  classifier.py  prompt.py
analysis/tokenization/: README.md  __init__.py  token_analyzer.py
analysis/values/: __init__.py  classifier.py  prompt.py  raw_prompt.txt
analyzers/: linguistic.py  url_analyzer.py
cli/: advanced.py  main.py
core/: registry.py  runner.py
docs/: index.html
docs/css/theme/: custom.css
docs/data/: forums_basic_stats.csv
examples/: forums_scraper.yaml
forums_scraper/: README.md  __init__.py  remade.md  settings.py  utils.py
forums_scraper/analyzers_basic/: __init__.py  linguistic.py  tokenizer.py  url_analyzer.py
forums_scraper/examples/: forums_scraper.yaml
forums_scraper/fs_cli/: advanced.py
forums_scraper/fs_core/: registry.py  runner.py
forums_scraper/pipelines/: analysis.py  database.py
forums_scraper/scraper/: settings.py
forums_scraper/scraper/pipelines/: __init__.py  database.py
forums_scraper/scraper/spiders/: radio_katolik.py
forums_scraper/spiders/: wiara.py
fs_cli/: main.py
fs_core/: __init__.py  config.py
presentation/: index.html
presentation/data/: yearly_posts_stats.csv
scraper/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
scraper/spiders/: dolina_modlitwy.py  radio_katolik.py  wiara.py  z_chrystusem.py
scripts/: analyze_saved_topics.py  export_posts_by_domain.py  forums_basic_stats.py  generate_politics_md.py  generate_politics_pdf.py  markdown_to_pptx.py  merge_all_databases.py  merge_llm_results_to_excel.py  pipeline.config.json  pipeline.py  report_content_url_domains.py  run_all_scrapers_final.py  values_visualization.py  yearly_posts_stats.py
weeklies_scraper/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
weeklies_scraper/spiders/: gosc_niedzielny.py  idziemy.py  niedziela.py  przewodnik_katolicki.py
weeklies_scraper/weeklies_scraper/: settings.py
weeklies_scraper/weeklies_scraper/spiders/: gosc_niedzielny.py  idziemy.py  niedziela.py  przewodnik_katolicki.py
