[project]
name = "forums-scraper"
version = "0.1.0"
description = "Uniwersalny scraper forów z opcjonalnymi analizami per-post (online/offline)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "alb" }
]

dependencies = []

[project.optional-dependencies]
cli = ["typer>=0.12"]
analyzers-basic = ["tiktoken>=0.7"]
http = ["httpx>=0.27"]
yaml = ["pyyaml>=6.0"]
toml = ["tomli>=2.0; python_version < '3.11'"]

[project.entry-points."forums_scraper.analyzers"]
token_count = "forums_scraper.analyzers_basic.tokenizer:TokenCountAnalyzer"

[project.scripts]
fs-cli = "forums_scraper.fs_cli.main:run"

[tool.setuptools.packages.find]
where = ["."]


