[project]
name = "forums-scraper"
version = "0.1.0"
description = "Uniwersalny scraper forów z opcjonalnymi analizami per-post (online/offline)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "alb" }
]

dependencies = [
    "scrapy>=2.11.0",
    "rich>=13.0.0",  # For better CLI output
]

[project.optional-dependencies]
cli = ["typer>=0.12"]
analyzers-basic = ["tiktoken>=0.7"]
analyzers-linguistic = ["spacy>=3.4.0"]
http = ["httpx>=0.27"]
yaml = ["pyyaml>=6.0"]
toml = ["tomli>=2.0; python_version < '3.11'"]
all = [
    "typer>=0.12",
    "tiktoken>=0.7", 
    "spacy>=3.4.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'"
]

[project.entry-points."forums_scraper.analyzers"]
token_count = "analyzers.tokenizer:TokenCountAnalyzer"
basic_tokenizer = "analyzers.linguistic:BasicTokenizer"
spacy_analyzer = "analyzers.linguistic:SpacyAnalyzer"
url_analyzer = "analyzers.url_analyzer:URLAnalyzer"
domain_stats = "analyzers.url_analyzer:DomainStatsAnalyzer"

[project.scripts]
cli = "cli.main:run"

[tool.setuptools.packages.find]
where = ["."]


